--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.52",
+    "chain3": "^0.1.8",
     "meteor-node-stubs": "^0.4.1"
   },
   "meteor": {
